{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 13,
  "lineage": "9634b90a-faea-8f97-992c-106f20f148ea",
  "resources": [
    {
      "module": "module.Compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:202533523389:instance/i-0a0867b1c1a6cfa99",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0867b1c1a6cfa99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040136266bf6a9ae7",
            "private_dns": "ip-10-0-2-237.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d6b0f0a40218e22c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057ac8d8dbd60e866",
            "tags": {
              "Name": "Private EC2"
            },
            "tags_all": {
              "Name": "Private EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb4dbd43a802ee62"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.private_sg",
            "module.Security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:202533523389:instance/i-085b686c20312412c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085b686c20312412c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03718eee062d271d7",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0565185603f972f17",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a31c787f5fbcd246",
            "tags": {
              "Name": "Public EC2"
            },
            "tags_all": {
              "Name": "Public EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0200387e65f21245d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533523389:internet-gateway/igw-0d947c13ab90cbfbf",
            "id": "igw-0d947c13ab90cbfbf",
            "owner_id": "202533523389",
            "vpc_id": "vpc-0ab017992b31c7f95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533523389:route-table/rtb-05c5d187c13ac5d48",
            "id": "rtb-05c5d187c13ac5d48",
            "owner_id": "202533523389",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab017992b31c7f95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533523389:route-table/rtb-038940879e9da0581",
            "id": "rtb-038940879e9da0581",
            "owner_id": "202533523389",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d947c13ab90cbfbf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab017992b31c7f95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_internet_gateway.igw_gateway",
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b461812883b746a",
            "route_table_id": "rtb-05c5d187c13ac5d48",
            "subnet_id": "subnet-057ac8d8dbd60e866"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_route_table.privateroute",
            "module.Network.aws_subnet.private",
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0106dc275ec162d87",
            "route_table_id": "rtb-038940879e9da0581",
            "subnet_id": "subnet-0a31c787f5fbcd246"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_internet_gateway.igw_gateway",
            "module.Network.aws_route_table.publicroute",
            "module.Network.aws_subnet.public",
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533523389:subnet/subnet-057ac8d8dbd60e866",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057ac8d8dbd60e866",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533523389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateEc2Subnet"
            },
            "tags_all": {
              "Name": "privateEc2Subnet"
            },
            "vpc_id": "vpc-0ab017992b31c7f95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533523389:subnet/subnet-0a31c787f5fbcd246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a31c787f5fbcd246",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533523389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicEc2Subnet"
            },
            "tags_all": {
              "Name": "publicEc2Subnet"
            },
            "vpc_id": "vpc-0ab017992b31c7f95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533523389:vpc/vpc-0ab017992b31c7f95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000bc7e769ee4b39c",
            "default_route_table_id": "rtb-0e39312c9e4b87d08",
            "default_security_group_id": "sg-0e3e8eb6b52a64251",
            "dhcp_options_id": "dopt-09ede4b035dc9ebaa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab017992b31c7f95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e39312c9e4b87d08",
            "owner_id": "202533523389",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533523389:security-group/sg-0eb4dbd43a802ee62",
            "description": "Allowing communication between private-public",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb4dbd43a802ee62",
            "ingress": [
              {
                "cidr_blocks": [
                  "182.176.222.244/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0200387e65f21245d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "202533523389",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab017992b31c7f95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_vpc.main",
            "module.Security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533523389:security-group/sg-0200387e65f21245d",
            "description": "Allow SSH/HTTP/HTTPs traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0200387e65f21245d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "202533523389",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab017992b31c7f95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}